--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,9 +40,9 @@
                 android:drawableLeft="@drawable/baseline_account_purple_small_24"
                 android:drawablePadding="8dp"
                 android:hint="@string/username"
-                android:inputType="textEmailAddress"
+                android:inputType="textPersonName"
                 android:padding="8dp"
-                android:autofillHints="emailAddress"
+                android:autofillHints="name"
                 android:textColor="@color/black" />
             <EditText
                 android:id="@+id/signup_email"
@@ -66,9 +66,9 @@
                 android:drawableLeft="@drawable/baseline_phone_24"
                 android:drawablePadding="8dp"
                 android:hint="@string/contact"
-                android:inputType="textEmailAddress"
+                android:inputType="textPhonetic"
                 android:padding="8dp"
-                android:autofillHints="emailAddress"
+                android:autofillHints="phone"
                 android:textColor="@color/black" />
 
             <EditText
