Done edit profile & logout, fix toolbar,

--- a/app/src/main/res/layout/activity_create_invitation.xml
+++ b/app/src/main/res/layout/activity_create_invitation.xml
@@ -13,18 +13,18 @@
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/baseline_side_menu_24"
         app:title="@string/eventify"
-        app:titleMarginStart="115dp"
-        app:titleTextColor="@android:color/white"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+        app:titleMarginStart="112dp"
+        app:titleTextColor="@android:color/white" />
 
     <TextView
         android:id="@+id/createEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Event"
+        android:text="@string/create_event"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,6 +42,7 @@
         android:background="@drawable/border"
         android:drawablePadding="8dp"
         android:hint="@string/event_name"
+        android:inputType="text"
         android:padding="8dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,6 +60,7 @@
         android:background="@drawable/border"
         android:drawablePadding="8dp"
         android:hint="@string/event_description"
+        android:inputType="text"
         android:padding="8dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +73,7 @@
         android:id="@+id/dateTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="DateTime"
+        android:text="@string/datetime"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -89,6 +91,7 @@
         android:layout_marginTop="14dp"
         android:layout_marginBottom="308dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/date"
         android:src="@drawable/ic_calendar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -113,6 +116,7 @@
         android:id="@+id/btnCapturePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/photo"
         android:src="@drawable/ic_camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +129,7 @@
         android:id="@+id/btnCreate"
         android:layout_width="128dp"
         android:layout_height="56dp"
-        android:text="Create"
+        android:text="@string/create"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -141,6 +145,7 @@
         android:background="@drawable/border"
         android:drawablePadding="8dp"
         android:hint="@string/event_theme"
+        android:inputType="text"
         android:padding="8dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -158,6 +163,7 @@
         android:background="@drawable/border"
         android:drawablePadding="8dp"
         android:hint="@string/event_location"
+        android:inputType="textPostalAddress"
         android:padding="8dp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
