--- a/app/src/main/res/layout/activity_side_menu.xml
+++ b/app/src/main/res/layout/activity_side_menu.xml
@@ -16,7 +16,7 @@
         android:theme="?attr/actionBarTheme"
         app:navigationIcon="@drawable/baseline_side_menu_24"
         app:title="@string/eventify"
-        app:titleMarginStart="115dp"
+        app:titleMarginStart="112dp"
         app:titleTextColor="@android:color/white"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
@@ -24,6 +24,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:id="@+id/sideMenu_list"/>
 
 
