--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#E8E8E8</color>
     <color name="lavender">#8692f7</color>
     <color name="darkPurple">#230F44</color>
     <color name="purple">#4A2686</color>
