--- a/app/src/main/res/layout/activity_feedback_list.xml
+++ b/app/src/main/res/layout/activity_feedback_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SendFeedback">
+    tools:context=".FeedbackList">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -20,20 +20,6 @@
         app:titleTextColor="@android:color/white"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp" />
-
-    <TextView
-        android:id="@+id/tv_write_feeback"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginLeft="16dp"
-        android:text="WRITE FEEBACK"
-        android:textColor="#736B6B"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -55,29 +41,24 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_feedback_event_name"
+                android:id="@+id/tv_feedbacklist_eventname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/event_name"
-                android:textAlignment="viewStart"
-                android:textColor="@color/purple"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:paddingBottom="8dp" />
+                android:text="Event Name"
+                android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/tv_feedback_username"
+                android:id="@+id/tv_feedbacklist_username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/username"
-                android:paddingBottom="8dp" />
+                android:text="Username" />
 
             <TextView
-                android:id="@+id/tv_feedback_eventDetail"
+                android:id="@+id/tv_feedbacklist_event_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/event_description"
-                android:paddingBottom="8dp" />
+                android:text="Event Description" />
+
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -87,38 +68,54 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 app:cardCornerRadius="10dp"
-                app:cardElevation="20dp">
-
-                <EditText
-                    android:id="@+id/editTextTextMultiLine"
+                app:cardElevation="20dp"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="118dp">
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:padding="10dp"
-                    android:hint="Enter your description"
-                    android:inputType="textMultiLine"
-                    android:gravity="start|top"
-                    android:background="@android:color/transparent"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:orientation="vertical">
 
-            </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/tv_feedbacklist_location"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Location:" />
 
+                    <TextView
+                        android:id="@+id/tv_feedbacklist_location_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Location Name" />
+
+                    <ImageView
+                        android:id="@+id/iv_feedbacklist_location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scaleType="centerCrop"
+                        android:layout_gravity="center"/>
+                </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/tv_feedback_message"
+                android:id="@+id/tv_feedbacklist_feedbacks"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Shake Your Phone To Send Feedback"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                android:paddingBottom="8dp" />
+                android:text="FEEDBACKS" />
 
-            <Button
-                android:id="@+id/btn_feedback_shakenow"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewFeedbacks"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginTop="30dp"
-                android:backgroundTint="@color/purple"
-                android:text="shake now"
-                android:textSize="20sp" />
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:clipToPadding="false"
+                android:padding="10dp"
+                android:scrollbars="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_feedback" />
 
         </LinearLayout>
 
