--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -32,12 +32,12 @@
         app:layout_constraintHorizontal_bias="0.058"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintVertical_bias="0.108" />
 
     <EditText
         android:id="@+id/eventName"
-        android:layout_width="363dp"
-        android:layout_height="47dp"
+        android:layout_width="375dp"
+        android:layout_height="49dp"
         android:autofillHints="Event Name"
         android:background="@drawable/border"
         android:drawablePadding="8dp"
@@ -47,15 +47,16 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
+        app:layout_constraintHorizontal_bias="0.361"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.21" />
+        app:layout_constraintVertical_bias="0.167" />
+
 
     <EditText
         android:id="@+id/eventDescription"
-        android:layout_width="363dp"
-        android:layout_height="88dp"
+        android:layout_width="377dp"
+        android:layout_height="81dp"
         android:autofillHints="Event Description"
         android:background="@drawable/border"
         android:drawablePadding="8dp"
@@ -65,52 +66,67 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.382"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32" />
+        app:layout_constraintVertical_bias="0.27" />
 
     <TextView
-        android:id="@+id/dateTime"
+        android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/datetime"
+        android:text="@string/start_date"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
+        app:layout_constraintHorizontal_bias="0.052"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.557" />
+        app:layout_constraintVertical_bias="0.387" />
 
+    <TextView
+        android:id="@+id/end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/end_date"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.456" />
 
     <ImageButton
         android:id="@+id/btnSelectDateTime"
         android:layout_width="43dp"
         android:layout_height="44dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginBottom="308dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="60dp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/date"
         android:src="@drawable/ic_calendar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/Location"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.658"
-        app:layout_constraintStart_toEndOf="@+id/dateTime"
-        app:layout_constraintTop_toBottomOf="@+id/eventTheme" />
+        app:layout_constraintHorizontal_bias="0.894"
+        app:layout_constraintStart_toEndOf="@+id/start"
+        app:layout_constraintTop_toBottomOf="@+id/eventDescription"
+        app:layout_constraintVertical_bias="0.391" />
 
     <ImageView
         android:id="@+id/imageLocation"
-        android:layout_width="306dp"
-        android:layout_height="143dp"
+        android:layout_width="311dp"
+        android:layout_height="162dp"
         android:background="@android:color/darker_gray"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.219"
+        app:layout_constraintHorizontal_bias="0.24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.858" />
+        app:layout_constraintVertical_bias="0.892" />
 
     <ImageButton
         android:id="@+id/btnCapturePhoto"
@@ -123,42 +139,24 @@
         app:layout_constraintHorizontal_bias="0.955"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.809" />
+        app:layout_constraintVertical_bias="0.805" />
 
     <Button
         android:id="@+id/btnCreate"
-        android:layout_width="128dp"
-        android:layout_height="56dp"
+        android:layout_width="102dp"
+        android:layout_height="43dp"
         android:text="@string/create"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
-
-    <EditText
-        android:id="@+id/eventTheme"
-        android:layout_width="363dp"
-        android:layout_height="47dp"
-        android:autofillHints="Event Name"
-        android:background="@drawable/border"
-        android:drawablePadding="8dp"
-        android:hint="@string/event_theme"
-        android:inputType="text"
-        android:padding="8dp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.464" />
+        app:layout_constraintVertical_bias="0.991" />
 
     <EditText
         android:id="@+id/Location"
-        android:layout_width="363dp"
-        android:layout_height="47dp"
+        android:layout_width="375dp"
+        android:layout_height="46dp"
         android:autofillHints="Location Name"
         android:background="@drawable/border"
         android:drawablePadding="8dp"
@@ -168,9 +166,43 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.479"
+        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.637" />
+        app:layout_constraintVertical_bias="0.642" />
+
+    <RadioGroup
+        android:id="@+id/radio_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation='horizontal'
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.543">
+
+        <RadioButton
+            android:id="@+id/privateEvent"
+            android:layout_width="191dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Private"
+            tools:layout_editor_absoluteX="36dp"
+            tools:layout_editor_absoluteY="532dp" />
+
+        <RadioButton
+            android:id="@+id/business"
+            android:layout_width="172dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Business"
+            tools:layout_editor_absoluteX="177dp"
+            tools:layout_editor_absoluteY="549dp" />
+    </RadioGroup>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
