--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,9 +32,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
             android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,10 +44,27 @@
                 android:textColor="@color/purple"
                 android:textSize="36sp"
                 android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/profileImageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginVertical="15dp"
+                android:contentDescription="@string/profile"/>
+
             <ListView
                 android:id="@+id/profileListView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
+            <ProgressBar
+                android:id="@+id/profile_progress_bar"
+                android:layout_width="32dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:indeterminateTint="@color/purple" />
+
             <Button
                 android:id="@+id/profile_edit_btn"
                 android:layout_width="match_parent"
@@ -55,13 +73,8 @@
                 android:backgroundTint="@color/purple"
                 android:text="@string/edit_profile"
                 android:textSize="20sp" />
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-
-
-
-
-
 </LinearLayout>
