--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/profile_background"
     android:orientation="vertical"
-    tools:context=".ProfileActivity">
+    tools:context=".ChangePasswordActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -39,55 +39,51 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/profile"
+                android:text="@string/change_password"
                 android:textAlignment="center"
                 android:textColor="@color/purple"
                 android:textSize="36sp"
                 android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/profileImageView"
-                android:layout_width="100dp"
-                android:background="@drawable/profile_border"
-                android:layout_height="100dp"
-                android:layout_gravity="center"/>
-
-            <ListView
-                android:id="@+id/profileListView"
+            <EditText
+                android:id="@+id/change_password"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:autofillHints="password"
+                android:background="@drawable/border"
+                android:drawableLeft="@drawable/baseline_password_24"
+                android:drawablePadding="8dp"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColor="@color/black" />
 
-            <ProgressBar
-                android:id="@+id/profile_progress_bar"
-                android:layout_width="32dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:indeterminateTint="@color/purple" />
+            <EditText
+                android:id="@+id/confirm_change_password"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:autofillHints="password"
+                android:background="@drawable/border"
+                android:drawableLeft="@drawable/baseline_password_24"
+                android:drawablePadding="8dp"
+                android:hint="@string/confirm_password"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColor="@color/black" />
 
             <Button
-                android:id="@+id/profile_edit_btn"
+                android:id="@+id/change_pwd_btn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/purple"
-                android:text="@string/edit_profile"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/change_pwd_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="31dp"
-                android:layout_marginBottom="31dp"
                 android:text="@string/change_password"
-                android:textAlignment="center"
-                android:textColor="@color/lavender"
-                android:textSize="18sp"
-                tools:ignore="HardcodedText" />
-
-
+                android:textSize="20sp" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
