--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -50,9 +50,9 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
+                android:background="@drawable/profile_border"
                 android:layout_marginVertical="15dp"
-                android:contentDescription="@string/profile"
-                android:src="@drawable/logo" />
+                android:contentDescription="@string/profile"/>
 
             <EditText
                 android:id="@+id/edit_username"
