--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,16 +93,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/login_pwd" />
 
-
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/register_redirect_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
         android:layout_marginTop="31dp"
         android:text="Not registered yet? Register here"
         android:textAlignment="center"
