--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="darkPurple">#230F44</color>
     <color name="purple">#4A2686</color>
     <color name="yellow">#FFD815</color>
+    <color name="red">#e34e57</color>
 </resources>
