--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -39,16 +39,18 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:text="@string/change_password"
                 android:textAlignment="center"
                 android:textColor="@color/purple"
-                android:textSize="36sp"
+                android:textSize="32sp"
                 android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/change_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="20dp"
                 android:autofillHints="password"
                 android:background="@drawable/border"
@@ -63,6 +65,7 @@
                 android:id="@+id/confirm_change_password"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="20dp"
                 android:autofillHints="password"
                 android:background="@drawable/border"
@@ -77,7 +80,9 @@
                 android:id="@+id/change_pwd_btn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
                 android:backgroundTint="@color/purple"
                 android:text="@string/change_password"
                 android:textSize="20sp" />
