--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,125 +22,130 @@
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp"/>
 
-
-    <androidx.cardview.widget.CardView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/home_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        android:id="@+id/create_event_card">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:padding="24dp">
-
-            <TextView
-                android:layout_width="190dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="28dp"
-                android:text="@string/create_event"
-                android:textColor="@color/purple"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:id="@+id/calendar_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:contentDescription="@string/create_event"
-                app:srcCompat="@drawable/baseline_calendar_month_24" />
+        android:layout_height="wrap_content" />
 
 
-        </LinearLayout>
+    <!--    <androidx.cardview.widget.CardView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="30dp"-->
+<!--        app:cardCornerRadius="30dp"-->
+<!--        app:cardElevation="20dp"-->
+<!--        android:id="@+id/create_event_card">-->
 
-    </androidx.cardview.widget.CardView>
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="150dp"-->
+<!--            android:layout_gravity="center_horizontal"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:padding="24dp">-->
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        android:id="@+id/view_event_card">
+<!--            <TextView-->
+<!--                android:layout_width="190dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="28dp"-->
+<!--                android:text="@string/create_event"-->
+<!--                android:textColor="@color/purple"-->
+<!--                android:textSize="30sp"-->
+<!--                android:textStyle="bold" />-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:padding="24dp">
-
-            <TextView
-                android:layout_width="190dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="28dp"
-                android:text="@string/view_event"
-                android:textColor="@color/purple"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:contentDescription="@string/create_event"
-                app:srcCompat="@drawable/baseline_event_80" />
+<!--            <ImageView-->
+<!--                android:id="@+id/calendar_icon"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:contentDescription="@string/create_event"-->
+<!--                app:srcCompat="@drawable/baseline_calendar_month_24" />-->
 
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp"
-        android:id="@+id/view_invitation_card">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="30dp"-->
+<!--        app:cardCornerRadius="30dp"-->
+<!--        app:cardElevation="20dp"-->
+<!--        android:id="@+id/view_event_card">-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal"
-            android:padding="24dp">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="150dp"-->
+<!--            android:layout_gravity="center_horizontal"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:padding="24dp">-->
 
-            <TextView
-                android:layout_width="190dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:text="@string/view_invitations"
-                android:textColor="@color/purple"
-                android:textSize="30sp"
-                android:textStyle="bold" />
+<!--            <TextView-->
+<!--                android:layout_width="190dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="28dp"-->
+<!--                android:text="@string/view_event"-->
+<!--                android:textColor="@color/purple"-->
+<!--                android:textSize="30sp"-->
+<!--                android:textStyle="bold" />-->
 
-            <ImageView
-                android:id="@+id/view_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:contentDescription="@string/create_event"
-                app:srcCompat="@drawable/baseline_mail_outline_24" />
+<!--            <ImageView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:contentDescription="@string/create_event"-->
+<!--                app:srcCompat="@drawable/baseline_event_80" />-->
 
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
+
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_margin="30dp"-->
+<!--        app:cardCornerRadius="30dp"-->
+<!--        app:cardElevation="20dp"-->
+<!--        android:id="@+id/view_invitation_card">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="150dp"-->
+<!--            android:layout_gravity="center_horizontal"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:padding="24dp">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="190dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="15dp"-->
+<!--                android:text="@string/view_invitations"-->
+<!--                android:textColor="@color/purple"-->
+<!--                android:textSize="30sp"-->
+<!--                android:textStyle="bold" />-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/view_icon"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:contentDescription="@string/create_event"-->
+<!--                app:srcCompat="@drawable/baseline_mail_outline_24" />-->
+
+
+<!--        </LinearLayout>-->
+
+<!--    </androidx.cardview.widget.CardView>-->
 
 
 </LinearLayout>
