--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -48,9 +48,10 @@
             <ImageView
                 android:id="@+id/profileImageView"
                 android:layout_width="100dp"
-                android:background="@drawable/profile_border"
                 android:layout_height="100dp"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:layout_marginVertical="15dp"
+                android:background="@drawable/profile_border" />
 
             <ListView
                 android:id="@+id/profileListView"
@@ -68,9 +69,20 @@
                 android:id="@+id/profile_edit_btn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:layout_marginHorizontal="15dp"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/purple"
                 android:text="@string/edit_profile"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/profile_delete_btn"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="@color/red"
+                android:text="@string/delete_account"
                 android:textSize="20sp" />
 
             <TextView
@@ -84,7 +96,6 @@
                 android:textColor="@color/lavender"
                 android:textSize="18sp"
                 tools:ignore="HardcodedText" />
-
 
 
         </LinearLayout>
