--- a/app/src/main/res/layout/activity_send_feedback.xml
+++ b/app/src/main/res/layout/activity_send_feedback.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".SendFeedback">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -106,7 +113,7 @@
                 android:id="@+id/tv_feedback_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Shake Your Phone To Send Feedback"
+                android:text="Click On Shake And Shake Your Phone To Send Feedback"
                 android:textAlignment="center"
                 android:textSize="24sp"
                 android:paddingBottom="8dp" />
@@ -120,9 +127,28 @@
                 android:text="shake now"
                 android:textSize="20sp" />
 
+            <Button
+                android:id="@+id/btn_view_feedback"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/purple"
+                android:textSize="20sp"
+                android:text="view feedbacks" />
+
+            <Button
+                android:id="@+id/btn_private_feedback"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/purple"
+                android:textSize="20sp"
+                android:text="private feedback" />
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
 
 </LinearLayout>
+</ScrollView>
